--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Almerce</title>
-    <link rel="stylesheet" href="/public/main.css" />
+    <link rel="stylesheet" href="/main.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -12,7 +12,7 @@
   </head>
   <body onload="sendmessage()">
     <div class="infobar">
-        <img class="messageprofile" src="/public/images/robot.jpg">
+        <img class="messageprofile" src="/images/robot.jpg">
         <h2>Almerce</h2>
     </div>
     <div id="chat" class="mainbody"></div>
@@ -23,6 +23,6 @@
       <input id="message" class="messageinput" placeholder="type..." />
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="/public/chatbot.js"></script>
+    <script src="/chatbot.js"></script>
   </body>
 </html>
