mobile issue test 1.0

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <button id="sendbutton" onclick="receivemessage()" class="sendbutton">
           <i class="material-icons">send</i>
         </button>
-        <input id="message" class="messageinput" placeholder="type..." />
+        <input id="message" class="messageinput" placeholder="" />
       </div>
     </div>
     <script
