--- a/public/index.html
+++ b/public/index.html
@@ -9,26 +9,25 @@
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="height=height-width, initial-scale=1" />
   </head>
   <body onload="sendmessage()">
-    <div id="maincontainer">
-      <div class="infobar">
-        <img class="messageprofile" src="/images/robot.jpg" />
-        <h2>Almerce</h2>
-      </div>
-      <div id="chat" class="mainbody"></div>
-      <div class="controls">
-        <button id="sendbutton" onclick="receivemessage()" class="sendbutton">
-          <i class="material-icons">send</i>
-        </button>
-        <input id="message" class="messageinput" placeholder="" />
-      </div>
+    <div class="infobar">
+      <img class="messageprofile" src="/images/robot.jpg" />
+      <h2>Almerce</h2>
+    </div>
+    <div id="chat" class="mainbody"></div>
+    <div class="controls">
+      <button id="sendbutton" onclick="receivemessage()" class="sendbutton">
+        <i class="material-icons">send</i>
+      </button>
+      <input id="message" class="messageinput" placeholder="" />
     </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous">
-    </script>
+      crossorigin="anonymous"
+    ></script>
     <script src="/chatbot.js"></script>
   </body>
 </html>
